--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 
                 <div class="hero__bottom">
                     <div class="hero__btn-wrapper">
-                        <button class="hero__arrow"><img src="./img/strlkl.svg" width="21" height="16" alt="Arrow to left"></button>
+                        <button class="hero__arrow" onclick="alert('До слайдера еще далекоъъ')"><img src="./img/strlkl.svg" width="21" height="16" alt="Arrow to left"></button>
                         <button class="hero__arrow hero__arrow-right"><img src="./img/strlkl.svg" width="21" height="16" alt="Arrow to right"></button>
                     </div>
                     
